# vertix

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
examples/: recommendation_example.py
vertix/: __init__.py  app.py
vertix/db/: __init__.py  chroma_client.py  chroma_db.py  chroma_setup.py  chroma_setup_client.py  chroma_wrapper.py  db_utilities.py
vertix/db/chroma_db/: chroma_client.py  chroma_db.py
vertix/db/hylladb/: HyQL.md  hql_parser.py  hylla_db.py  hylla_utilities.py  notes.md
vertix/db/hylladb/model_generator/: auto_generate_models.py  generated_models.py
vertix/graph/: graph.py
vertix/models/: __init__.py  base_graph_entity_model.py  edge_model.py  models.py  node_model.py
vertix/tests/: helper_functions.py  test_chroma_setup.py  test_chroma_wrapper.py  test_helper_functions.py  test_models.py
vertix/tests/db/: test_chroma_client.py  test_chroma_db.py  test_chroma_setup_client.py  test_db_utilities.py
vertix/tests/helpers/: test_helper_functions.py
vertix/tests/models/: test_base_graph_entity.py  test_edge.py  test_node.py
vertix/tests/utilities/: test_utilities.py
vertix/typings/: __init__.py  chroma.py  db.py
vertix/utilities/: rich_config.py  utilities.py
