[tool.poetry]
name = "vertix"
version = "0.1.0"
description = "A lightweight, embeddable graph database."
authors = ["Evan Schultz <evan@postulate.llc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
pyvis = "^0.3.2"
pytest = "^7.4.4"
pydantic = "^2.5.3"
chromadb = "^0.4.22"
rich = "^13.7.0"
hypothesis = "^6.92.6"
pytest-cov = "^4.1.0"
pyparsing = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
